feat(common): cache permission resolver results